# Cpp_Raft_impl

./: CMakeLists.txt  CMakePresets.json  Justfile
apps/: raft_impl.cpp
include/raft/: lib.hpp
include/raft2/: helpers.hpp  lib.hpp
src/: CMakeLists.txt  lib2.cpp
